--- a/.github/workflows/job-close-stale.yml
+++ b/.github/workflows/job-close-stale.yml
@@ -22,7 +22,7 @@ jobs:
         # https://github.com/marketplace/actions/close-stale-issues
         uses: actions/stale@v9.1.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.ISSUES_BOT_TOKEN }}
           days-before-stale: 183
           days-before-close: 7
           operations-per-run: 30
@@ -56,7 +56,7 @@ jobs:
         # https://github.com/marketplace/actions/close-stale-issues
         uses: actions/stale@v9.1.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.ISSUES_BOT_TOKEN }}
           days-before-stale: 7
           days-before-close: 7
           operations-per-run: 30
@@ -83,7 +83,7 @@ jobs:
         # https://github.com/marketplace/actions/close-stale-issues
         uses: actions/stale@v9.1.0
         with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: ${{ secrets.ISSUES_BOT_TOKEN }}
           days-before-stale: 7
           days-before-close: 7
           operations-per-run: 30
