--- a/.github/workflows/on-open-handler.yml
+++ b/.github/workflows/on-open-handler.yml
@@ -24,6 +24,6 @@ jobs:
         uses: actions-cool/issues-helper@v3.6.0
         with:
           actions: 'add-labels'
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ISSUES_BOT_TOKEN }}
           issue-number: ${{ github.event.issue.number || github.event.pull_request.number }}
           labels: '👷 Maintainer'
