Add required icon sizes for PWAs on Firefox for Android (#4641)

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -25,6 +25,16 @@
             "src": "img/apple-icon-144x144.png",
             "sizes": "144x144",
             "type": "image/png"
+        },
+        {
+            "src": "img/apple-icon-192x192.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "img/apple-icon-512x512.png",
+            "sizes": "512x512",
+            "type": "image/png"
         }
     ]
 }
